--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,13 @@ html {
     background-color: #ededed;
 }
 .boxscore__details {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
+.boxscore__details__team {
+    color: #fff;
+}
+.boxscore__details__team, .boxscore__details__info {
+    text-align: center;
+}
+
