--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html {
 
 .boxscore__team {
     display: grid;
-    justify-content: 1fr 6fr 1fr;
+    grid-template-columns: 1fr 6fr 1fr;
 }
 
 .boxscore__team label {
